objects/Servicemax_Finance_Report__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending - FSM</fullName>
                </value>
                <value>
                    <fullName>Pending - SF</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Body__c</fullName>
        <label>Attachment Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSR_IP_ID__c</fullName>
        <label>FSR IP ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Servicemax Finance Reports</relationshipLabel>
        <relationshipName>Servicemax_Finance_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Servicemax Finance Report</label>
    <listViews>
        <fullName>FS_Management_Servicemax_Finance_Report</fullName>
        <filterScope>Queue</filterScope>
        <label>FS Management</label>
        <queue>FS_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Service_FSR_Queue_Servicemax_Finance_Report</fullName>
        <filterScope>Queue</filterScope>
        <label>Field Service FSR Queue</label>
        <queue>Field_Service_FSR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SVMX_Sales_Finance_Team_Servicemax_Finance_Report</fullName>
        <filterScope>Queue</filterScope>
        <label>SVMX Sales Finance Team</label>
        <queue>SVMX_Sales_Finance_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SFR-{000000}</displayFormat>
        <label>Servicemax Finance Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servicemax Finance Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>